duque_de_la_rosa_michelle_fip/css/main.css
/*
Couples Resort Fixed-Width Build
12 column grid as per XD file
 */

/* ---Basic CSS Reset--- */

body {
    margin: 0;
    padding: 0;
    color: #626262;
    font-family: 'Nunito', sans-serif;
 }
 
 h1, h2, h3, h4, h5, p {
    margin: 0;
    padding: 0;
 }
 
 a {
    text-decoration: none;
    transition: all 0.5s ease-in-out;
 }
 
 input, textarea {
    display: block;
    margin: 0;
    padding: 0;
 }

 /* 
    CSS Guide 

    1. General Styles
    2. Grid
    3. Header
    4. Main Hero Image
    5. Why Couples Resort
    6. About & FAQ
    7. Contact Form
    8. Footer
 */

 /* 1. ---General Styles--- */

 .hidden {
    display: none;
}

.cr-red {
    color: #9a2018;
 }

 .container {
  margin: 0 auto;
  background-color: rgb(245, 245, 245);

}


/* 2. ---Grid--- */

    /*
    this is our grid based off of our XD file 
    1170px + 30px padding = 1200px
    The XD file acts as our guide there is a 1:1 relationship
    */
.grid {
   padding-left: 15px;
   padding-right: 15px;
   display:grid;
   grid-template-columns: repeat(12, 70px);
   grid-column-gap: 30px;
}


/* 3. Header */

#main-header {
   position: sticky;
   background-color: #25316D;
   top:0px;
   height: 100px;
}

.logo {
   grid-column: 1/4;
   margin-top:10px;
   width: 260px;
   height: 80px;
   margin-left: 100px;
}

.logo img{
	margin:10px;
	width: 200px;
}

#main-nav {
   grid-column: 4/13;
   margin:0;
   margin-top:10px;
   margin-left:30px;
   height:90px;
   background-color: #5F6F94;
   height: 80px;
   text-align: center;
}

#main-nav ul {
   margin-top: 35px;
   margin-left: 30px;
   padding:0;
}

#main-nav li {
display:inline;
margin-right: 28px;
font-family: 'Roboto', sans-serif;
}

#main-nav li:last-child {
   margin-right: 0;
}

#main-nav li a {
   color: #dfdfdf;
}

#main-nav li a:hover {
 padding-bottom: 8px;
 border-bottom: 3px solid #06113C;
}

/* look for an element that already has the class 'active' attached to it*/
#main-nav li a.active {
   padding-bottom: 8px;
   border-bottom: 3px solid #06113C;
}

#book-now-top {
grid-column: 13/-1;
margin-top: 10px;
height: 80px;
width: 260px;
font-size: 20px;
}

.book-now {
   background-color: #97D2EC;
   color: #06113C;
   font-size: 16px;
   justify-content: center;
   align-items: center;
   display:flex;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;   
}

#book-now-top:hover {
   background-color: #5F6F94;
}




/* 4. ---Main Hero Image--- */


.hero-img-h2{
   font-size: 33px;
   margin-top: 150px;
   font-family: 'Roboto', sans-serif;
}

.hero-img-h3{
	font-size: 25px;
	margin-top: 30px;
	align-content: center;
	text-align:center;
	margin-bottom: 50px;
   font-family: 'Roboto', sans-serif;
}

.hero-img-h4{
   font-size: 24px;
   margin-top: 150px;
   font-family: 'Roboto', sans-serif;
}

.buttons-categories{
	background-color: #97D2EC;
	color:#06113C;
	font-size: 50px;
	font-weight: bold;
	justify-content: center;
	padding: 0px;
	width: 223px;
	height: 83px;
   margin-left: 80px;
   margin-top: -140px;
	font-family: 'Roboto', sans-serif;
}

.box-buttons-categories{
	margin-top: 100px;
}


#hero-welcome{
   padding-bottom: 60px;
}

#hero-welcome p{
   grid-column: 2/12;
   margin-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
}



#hero-contact{
   background-color: rgb(245, 245, 245);
   padding-top: 80px;
   padding-bottom: 80px;
}

#hero-numbers{
   grid-column: 4/7;
}

#hero-address{
   grid-column: 8/11;
}


 /* font awesome icons */

 .fa-mobile-alt {
   grid-column: 3/4;
}

.fa-map-marker-alt {
   grid-column: 7/8;
}

.fas {
   font-size: 84px;
   color: #9a2018;
   margin: 0 auto;
}

/* 5. ---Why Couples Resort--- */

#why nav {
   height: 200px;
   border-top: solid 3px #c3c3c3;
   border-bottom: solid 3px #c3c3c3;
} 

#why nav a {
   font-size: 24px;
   color: #000;
}

#why nav ul{
   list-style-type: none;
   grid-column: 2/11;
   padding: 0px;
   align-self: end;
   margin-bottom: 40px;
}

#why nav ul li {
   display: inline;
   margin-right: 55px;
}

#why nav ul li a.active {
   padding-bottom: 30px;
   border-bottom: 10px solid #9a2018;
}

#why nav ul li a:hover {
   padding-bottom: 30px;
   border-bottom: 10px solid #9a2018;
}

/* #box-options{
	display: grid;
}

#why-options {
   width: 1640px;
   height: 507px;
   gap: 50px;
   background-color: black;
   place-self: center;
}

#why-options .why-us-img {
   grid-column: span 3;
}

.categories-photos {
	width: 536,5;
	height: 242px;
}

.why-us-img a:hover {
   padding-bottom: 5px;
   border-bottom: solid 2px #9a2018;
}  */

#why-options {
	grid-row-gap: 30px;
	margin-bottom: 110px;
	
 }
 
 /* #why-options .why-us-img {
 } */

#img1{
	grid-column: 2/5;
 }

 #img2{
	grid-column: 7/10;
 }

#img3{
	grid-column: 12/-1;
 }

 .why-us-img{
	width: 380px;
	height: 407px;
	background-color: #06113C;
 }

 .why-us-img img{
	width: 380px;
	height: 202px;
 }
 
 .why-us-img h4 {
	font-size: 28px;
	margin-bottom: 10px;
 }
 
 .why-us-img h5 {
	font-size: 18px;
	margin-bottom: 15px;
 }
 
 .why-us-img p {
	font-size: 12px;
	margin-bottom: 20px;
	line-height: 18px;
 }
 
 .why-us-img a {
	color: #fff;
 }
 
 .why-us-img a:hover {
	padding-bottom: 5px;
	border-bottom: solid 2px #9a2018;
 } 


/* 6. ---About & FAQ--- */


/* #world-cup {
   grid-column: 2/7;
   align-self: end;
} */

#about-text {
   margin-bottom: 80px;
}

#box-european-clubs{
	background-color: #06113C;
   height: 714px;
   color: rgb(245, 245, 245);
}

#about-text-group1 {
   grid-column: 2/7;
}

#about-text-group2{
	grid-column: 2/7;
}


#about-text p {
	margin-top: 80px;
   margin-bottom: 10px;
   font-size: 24px;
}

#about-text-group2 p{
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 18px;
}

#box{
	width: 200px;
	margin-top: 90px;
   margin-left: 270px;
}

#world-cup{
	width: 574px; 
	height: 482px;
 }

.button-web{
	background-color: #97D2EC;;
	color:#06113C;
	font-size: 15px;
	justify-content: center;
	align-items: center;
	margin-top: 30px;
	padding: 0px;
	width: 160px;
	height: 40px;
	font-family: 'Roboto', sans-serif;
   font-weight: bold;
}

.faq {
   background-color: #f4f4f4;
   padding: 64px 0 96px 0;
}

.faq h2 {
   font-size: 24px;
   grid-column: 2/-1;
}

.faq h2 span {
   color: #9a2018;
   font-size: 16px;
}

.faq-items {
   margin-bottom: 16px;
   grid-column: 2/12;
}

.faq-items h3 {
   background: #e8e7e7;
   padding: 16px;
   font-size: 16px;
}

.faq-items ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
}

.faq-items li {
   padding: 8px 0;
   border-bottom: 1px solid #9a2018;
}   

.faq-items a {
   color: inherit;
   font-size: .85em;
}

.faq-list-con {
   margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(10, 70px);
   grid-column-gap: 30px;
   margin-bottom: 20px;
}

#faq-list-group1 {
   grid-column: 1/6;
}

#faq-list-group2 {
   grid-column: 6/-1;
} 

#city{
   width: 350px; 
   height: 350px; 
   margin-top: 15px;
}

#psg{
   width: 250px; 
   height: 250px; 
   margin-top: 50px;
   margin-left: 370px;
}

#dortmund{
   width: 250px; 
   height: 250px; 
   margin-top: 410px;
   margin-left: -200px;
}

#madrid{
   width: 350px; 
   height: 350px; 
   margin-top: 350px;
   margin-left: 70px;
}


/* 7. ---Contact Form--- */


#contact_form {
   margin-top: 130px;
   grid-row-gap: 30px;
	margin-bottom: 110px;
}

#text-contact{
   grid-column: 2/7;
}

#mainform{
   grid-column: 8/12;
   background-color: #06113C;
   width: 674px;
   height: 725px;
   padding-left: 65px;
   padding-right: 35px;
   padding-top: 60px;
}

#mainform input{
   width: 586px;
}

#mainform textarea{
   width: 586px;
   height: 190px;
}

#button-send{
   width: 220px;
   height: 67px;
}


#contact_form h3{
	font-size: 25px;
	margin-top: 30px;
	margin-bottom: 50px;
   font-family: 'Roboto', sans-serif;
}

#contact-form-hero h2 {
   grid-column: 7/12;
   align-self: end;
}

#contact-form-text p {
   grid-column: 2/12;
   margin-bottom: 80px;
}

#contact-form-address-left {
   grid-column: 2/6;
}

#contact-form-address-left h3 {
   margin-bottom: 20px;
   font-size: 36px;
}

#contact-form-address-left p {
   margin-bottom: 20px;
}

#contact-form-fields-right {
   grid-column: 6/12;
}

input, textarea{
   padding: 22px;
   border: 2px solid #d6d6d6;
   background-color: rgb(245, 245, 245);
   border-radius: 5px;
   margin-bottom: 30px;
   font: inherit;
}

#contact-form-fields-right textarea{
   height: 300px;
}

#contact-form-fields-right form{
   display: flex;
   flex-direction: column;
}

input[type="submit"]{
   padding: 16px  32px;
   background: #9a2018;
   color: rgb(245, 245, 245);
   border:none;
   width: 100px;
   align-self: flex-end;
   transition: all 200ms ease-in;
}

input[type="submit"]:hover{
   background-color: #626262;
   border-radius: 0;
}



/* 8. ---Footer--- */

footer{
   background-color: #06113C;
   height: 270px;
}

footer ul {
   margin-top: 35px;
   margin-left: 30px;
   padding:0;
}

footer li {
display:inline;
margin-right: 28px;
font-size: 21px;
}

footer li a {
   color: rgb(245, 245, 245);
}

#link-footer{
   grid-column: 2/4;
   margin-top: 10px;
}


#social-media{
   grid-column: 12/15;
   margin-top: 80px;
}

#mainform-newsletter{
   grid-column: 5/11;
   margin-top: 27px;
}

#mainform-newsletter h3{
   font-family: 'Roboto', sans-serif;
   position: relative;
   top: 30px;
   color: rgb(245, 245, 245);
}

#mainform-newsletter input{
   position: relative;
   top: 50px;
   width: 386px;
}


#button-footer{
   left: 460px;
   bottom: 80px;
   position: relative;
   height: 70px;
}

